# norishomefoods

./: .gitignore  Pipfile  README.md
webshop/: .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.cfg
webshop/.github/workflows/: ci.yml
webshop/docs/: conf.py
webshop/webshop/: asgi.py  settings.py  urls.py  wsgi.py
